first day learning

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
     <head>
         <title>Web Demo</title>
+        <meta  charset="utf-8">
+        <link rel="stylesheet" href="main.css">
     </head>
 
     <body>
-
+        <h1 class="heading" id="headingh1">Tiêu đề H1</h1>
+        <input type="text">
+        <button>DK</button>
+        <a href="https://www.youtube.com/watch?v=AzmdwZ6e_aM&list=PL_-VfJajZj0U9nEXa4qyfB4U5ZIYCMPlz&index=7">đi tới trang youtube</a>
+        <img src="" alt="">
     </body>
 </html>
