feat: Update header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
     <div class="app">
         <header class="header">
-            <div class="grid">
+            <!-- NOTE: Update header from feat/update-header branch -->
+            <div class="ugrid">
                 <nav class="header__navbar">
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item header__navbar-item--separate">Vào cửa hàng trên ứng dụng</li>
