feat: Update header 2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="app">
         <header class="header">
-            <!-- NOTE: Update header from feat/update-header branch -->
+            <!-- NOTE: Update header from feat/update-header branch complict here-->
             <div class="ugrid">
                 <nav class="header__navbar">
                     <ul class="header__navbar-list">
