feat: Cai nay commit sau ne

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div class="app">
         <header class="header">
             <!-- NOTE: Update header from feat/update-header branch complict here-->
+            <!-- NOTE: Update header from feat/update-header branch thang nayf complict-->
+             <!-- Giu ca 2 -->
             <div class="ugrid">
                 <nav class="header__navbar">
                     <ul class="header__navbar-list">
