--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
 </head>
 <body>
     <div class="app">
-        <header class="header">
-            <!-- NOTE: Update header from feat/update-header branch complict here-->
-            <!-- NOTE: Update header from feat/update-header branch thang nayf complict-->
-             <!-- Giu ca 2 -->
-            <div class="ugrid">
+        <header class="header">            
+            <div class="grid">
                 <nav class="header__navbar">
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item header__navbar-item--separate">Vào cửa hàng trên ứng dụng</li>
