feat: QR code navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
             <div class="grid">
                 <nav class="header__navbar">
                     <ul class="header__navbar-list">
-                        <li class="header__navbar-item header__navbar-item--separate">Vào cửa hàng trên ứng dụng</li>
+                        <li class="header__navbar-item header__navbar-item--has-qr header__navbar-item--separate">
+                            Vào cửa hàng trên ứng dụng
+                            <!-- HEADER QR CODE -->
+                            <div class="header_qr">
+                                <img src="./assets/img/qr_code.jpg" alt="QR CODE" class="header_qr-img">
+                                <div class="header_qr-apps">
+                                    <a href="" class="header_qr-link">
+                                        <img src="./assets/img/google_play.png" alt="GOOGLE PLAY" class="header_qr-download-img">
+                                    </a>
+                                    <a href="" class="header_qr-link">
+                                        <img src="./assets/img/app_store.png" alt="APP STORE" class="header_qr-download-img">
+                                    </a>                                                                
+                                </div>
+                            </div>
+                        </li>
                         <li class="header__navbar-item">
                             <span class="header__navbar-title--no-pointer">Kết nối</span>
                             <a href="" class="header__navbar-icon-link">
