--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
         </footer>
     </div>
     <!-- Modal Layout -->
-    <div class="modal">
+    <!-- <div class="modal">
         <div class="modal__overlay">
             
         </div>
-        <div class="modal__body">
+        <div class="modal__body"> -->
 
-            <!-- authen form -->
+            <!-- Register Form-->
 
-            <div class="auth-form">
+            <!-- <div class="auth-form">
                 <div class="auth-form__container">
 
                     <div class="auth-form__header">
@@ -164,9 +164,56 @@
                         </span>
                     </a>
                 </div>
-            </div>
+            </div> -->
 
-        </div>
-    </div>
+            <!-- Login Form -->
+
+            <!-- <div class="auth-form">
+                <div class="auth-form__container">
+
+                    <div class="auth-form__header">
+                        <h3 class="auth-form__heading">Đăng nhập</h3>
+                        <span class="auth-form__switch-btn">Đăng ký</span>
+                    </div>
+                    <div class="auth-form__form">
+                        <div class="auth-form__group">
+                            <input type="text" class="auth-form__input" placeholder="Email của bạn">
+                        </div>
+                        <div class="auth-form__group">
+                            <input type="password" class="auth-form__input" placeholder="Mật khẩu của bạn">
+                        </div>
+                    </div>
+
+                    <div class="auth-form__aside">
+                        <div class="auth-form__help">
+                            <a href="" class="auth-form__help-link auth-form__help-forgot">Quên mật khẩu</a>
+                            <span class="auth-form__help-separate"></span>
+                            <a href="" class="auth-form__help-link">Cần trợ giúp?</a>
+                        </div>
+                    </div>
+
+                    <div class="auth-form__controls">
+                        <button class="btn auth-form__controls-back btn--normal">TRỞ LẠI</button>
+                        <button class="btn btn--primary">ĐĂNG NHẬP</button>
+                    </div>
+                </div>
+                
+                <div class="auth-form__socials">
+                    <a href="" class="auth-form__socials--facebook btn btn--size-s btn--with-icon">
+                        <i class="auth-form__socials-icon fa-brands fa-square-facebook"></i>
+                        <span class="auth-form__socials-title">
+                            Kết nối với Facebook
+                        </span>
+                    </a>
+                    <a href="" class="auth-form__socials--google btn btn--size-s btn--with-icon">
+                        <i class="auth-form__socials-icon fa-brands fa-google"></i>
+                        <span class="auth-form__socials-title">
+                            Kết nối với Google
+                        </span>
+                    </a>
+                </div>
+            </div> -->
+        <!-- </div>
+    </div> -->
 </body>
 </html>
