--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Minyu Việt Nam | Mua và Bán trên ứng dụng di động hoặc Website</title>
+    <link rel="icon" type="image/x-icon" href="./assets/img/fav_icon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/2.0.0/normalize.min.css">
     <link rel="stylesheet" href="./assets/css/bass.css">
     <link rel="stylesheet" href="./assets/css/main.css">
