feat: home product item inprocess

--- a/index.html
+++ b/index.html
@@ -218,6 +218,46 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="home-product">
+                            <div class="grid__row">
+                                <div class="grid__column-2">
+                                    <!-- Product item -->
+                                    <div class="home-product-item">
+                                        <div class="home-product-item__img" style="background-image: url(https://down-vn.img.susercontent.com/file/7e8c7b7fa8e9bb148535de23af3aadfa.webp);"></div>
+                                        <h4 class="home-product-item__name">Viên uống Collagen Myvitamins 90 viên</h4>
+                                        <div class="home-product-item__price">
+                                            <span class="home-product-item__price-old">490.000đ</span>
+                                            <span class="home-product-item__price-current">215.000đ</span>
+                                        </div>
+                                        <div class="home-product-item__action">
+                                            <span class="home-product-item__like">
+                                                <i class="fa-regular fa-heart"></i>
+                                                <!-- <i class="fa-solid fa-heart"></i> -->
+                                            </span>
+                                            <div class="home-product-item__rating">
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                                <i class="fa-solid fa-star"></i>
+                                            </div>
+                                        </div>
+                                        <div class="home-product-item_origin">
+                                            <span class="home-product-item__brand">Myvitamins</span>
+                                            <span class="home-product-item_origin-name">Anh</span>
+                                        </div>
+                                        <div class="home-product-item__favourite">
+                                            <i class="fa-solid fa-check"></i>
+                                            Yêu thích
+                                        </div>
+                                        <div class="home-product-item__sale-off">
+                                            <span class="home-product-item__sale-off-percent">10%</span>
+                                            <span class="home-product-item__sale-off-label">GIẢM</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
