--- a/index.html
+++ b/index.html
@@ -688,19 +688,19 @@
                         <ul class="footer-list">
                             <li class="footer-item">
                                 <a href="" class="footer-item__link">
-                                    <i class="fa-brands fa-facebook"></i>
+                                    <i class="footer-item__icon fa-brands fa-facebook"></i>
                                     Facebook
                                 </a>
                             </li>
                             <li class="footer-item">
                                 <a href="" class="footer-item__link">
-                                    <i class="fa-brands fa-instagram"></i>
+                                    <i class="footer-item__icon fa-brands fa-instagram"></i>
                                     Instagram
                                 </a>
                             </li>
                             <li class="footer-item">
                                 <a href="" class="footer-item__link">
-                                    <i class="fa-brands fa-linkedin"></i>
+                                    <i class="footer-item__icon fa-brands fa-linkedin"></i>
                                     LinkedIn
                                 </a>
                             </li>
@@ -711,13 +711,19 @@
                         <div class="footer__download">
                             <img src="./assets/img/qr_code.jpg" alt="" class="footer__download-qr">
                             <div class="footer__download-apps">
-                                <img src="./assets/img/google_play.png" alt="" class="footer__download-app-img">
-                                <img src="./assets/img/app_store.png" alt="" class="footer__download-app-img">
+                                <a href="" class="footer__download-app-link">
+                                    <img src="./assets/img/google_play.png" alt="" class="footer__download-app-img">
+                                </a>
+                                <a href="" class="footer__download-app-link">
+                                    <img src="./assets/img/app_store.png" alt="" class="footer__download-app-img">
+                                </a>                               
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="grid__row">
+            </div>
+            <div class="footer__bottom">
+                <div class="grid">
                     <p class="footer__text">© 2024 Nhut Minh</p>
                 </div>
             </div>
